applied one time binding to all snapshot pages and fixed column alignment issue

--- a/public/less/theme/snap-shots/snap-shot-theme.less
+++ b/public/less/theme/snap-shots/snap-shot-theme.less
@@ -101,12 +101,14 @@
     font-family: "Arial-Black", Arial;
     font-size: 30px;
     padding-left: 0.6em;
+    text-align: right;
   }
 
   .unit {
     font-family: 'Arial Narrow', Arial, sans-serif;
     font-size: 12px;
     padding:.25em;
+    text-align: left;
   }
 
   select {
